# Gerenciador_medicamentos_proj

./: README.md  bash  pyproject.toml
.github/workflows/: ci.yml
src/: app.py  core.py  main.py
src/src/: core.py
tests/: test_core.py  test_integracao.py
