[project]
name = "gerenciador-medicamentos"
version = "1.0.0"
description = "Sistema CLI para auxiliar idosos no controle de medicação"
authors = [{name = "Leticia", email = "seu@email.com"}]
dependencies = [
    "pytest>=8.0.0",
    "ruff>=0.3.0"
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
# Isso garante que ele use as regras modernas e pare de dar avisos
select = ["E", "F", "W"]
